fix(home): set deck overflow x & y to hidden

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,8 +28,9 @@
 
 html,
 body,
-main,
 #root {
   height: 100%;
   width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
